# webpty

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  Pipfile  Procfile  README.md  pyproject.toml  setup.py
.github/workflows/: codeql-analysis.yml  python-publish.yml
tests/: iframe.html
webpty/: __init__.py  __main__.py  index.html  server.py
webpty/static/: webpty.css  webpty.js  webpty.min.css  webpty.min.js
webpty/tools/: builders.py
