[tool.poetry]
name = "webpty"
version = "3.6"
description = "A web-based application to access shell & shell based applications via a browser"
readme = "README.md"
authors = ["Satheesh Kumar <mail@satheesh.dev>"]
license = "OSI Approved :: MIT License"

[tool.poetry.dependencies]
python = ">=3.7,<=3.9"
tornado = "6.2"
requests = "2.28.1"
importlib-metadata = "^5.1.0"

[tool.poetry.dev-dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
